# pyharmonics-gpt

./: .gitignore  README.md  pyproject.toml  requirements.txt  supabase_schema.sql  supabase_schema_fix.sql  supabase_schema_vibe.sql  supabase_storage_policy_fix.sql  test-report-auto-analysis-type.md  test-report-chart-fix.md  test-report-dashboard-401-fix.md  test-report-minimax-config.md  test-report-position-custom-capital.md  test-report-signal-engine-v4.md  test-report-signal-engine.md  test-report-symbol-dropdown.md  verify_llm_config.py
app/: main.py  openai_handler.py  pyharmonics_handler.py
app/api/: auth.py  errors.py  middleware.py  vibe_routes.py
app/domain/: enums.py  schemas.py  signals.py  validation.py  validators.py  vibe_schemas.py
app/infra/: historical_data.py  (+6 more)
docs/: frontend-design-2026-07-14.md  ios-apk-plan.md  position-management-design.md  supabase-setup-guide.md  vibe-e2e-test-report-2026-07-22.md  vibe-phase3-audit-report.md
frontend/: .env.example  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-setup.ts  vitest.config.ts
tests/: conftest.py  coverage_report.md  test_api.py  test_auth.py  test_auto_analysis_type.py  test_backtest_engine.py  test_chart_route.py  test_chart_store.py  test_domain.py  test_domain_signals.py  test_domain_validation.py  test_infra.py  test_integration.py  test_regression.py  test_services.py  test_signal_engine.py  test_supabase_client.py  test_supabase_client_fix.py  test_vibe_infra.py  test_vibe_tools.py
(+107 files in other folders)
