[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyharmonics-gpt"
version = "0.2.0"
description = "Pyharmonics SaaS analysis API"
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.3.2",
    "pyharmonics>=1.4.3",
    "openai>=1.60.2",
    "python-dotenv>=1.0.1",
    "gunicorn>=20.1.0",
    "pydantic>=2.0.0",
    # Constrain pyharmonics transitive dependencies to avoid a websockets
    # conflict: yfinance>=0.2.59 / >=1.0 need websockets>=11/>=13, while
    # alpaca-trade-api needs websockets<11. pyharmonics 1.4.3 also needs
    # alpaca-trade-api>=2.0.0 for TimeFrameUnit.Week/Month.
    "alpaca-trade-api>=3.0.0,<4.0.0",
    "yfinance>=0.2.55,<0.2.58",
    "websockets>=10.0,<11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/templates/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
